desktop and mobaile version

--- a/src/policy.html
+++ b/src/policy.html
@@ -12,7 +12,7 @@
     <p>Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые CREATIVE code (далее – Оператор).</p>
     <ul style="list-style-type: none;">
         <li>1.1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.</li><br>
-        <li>1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта</li>
+        <li>1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор dimaivan-2022@mail.ru может получить о посетителях веб-сайта</li>
     </ul>
     <h2 style="font-size: 22px;">2. Основные понятия, используемые в Политике</h2>
     <ul style="list-style-type: none;">
@@ -43,7 +43,7 @@
     <h2 style="font-size: 22px;">4. Цели обработки персональных данных</h2>
     <ul style="list-style-type: none;">
         <li>4.1. Цель обработки персональных данных Пользователя — заключение, исполнение и прекращение гражданско-правовых договоров; предоставление доступа Пользователю к сервисам, информации и/или материалам, содержащимся на веб-сайте уточнение деталей заказа.</li><br>
-        <li>4.2. Также Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных предложениях и различных событиях. Пользователь всегда может отказаться от получения информационных сообщений, направив Оператору письмо на адрес электронной почты  с пометкой «Отказ от уведомлений о новых продуктах и услугах и специальных предложениях».</li><br>
+        <li>4.2. Также Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных предложениях и различных событиях. Пользователь всегда может отказаться от получения информационных сообщений, направив Оператору письмо на адрес электронной почты dimaivan-2022@mail.ru с пометкой «Отказ от уведомлений о новых продуктах и услугах и специальных предложениях».</li><br>
         <li>4.3. Обезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для сбора информации о действиях Пользователей на сайте, улучшения качества сайта и его содержания.</li><br>
     </ul>
     <h2 style="font-size: 22px;">5. Правовые основания обработки персональных данных</h2>
@@ -56,8 +56,8 @@
     <ul style="list-style-type: none;">
         <li>6.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие доступ к персональным данным неуполномоченных лиц.</li><br>
         <li>6.2. Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за исключением случаев, связанных с исполнением действующего законодательства.</li><br>
-        <li>6.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора  с пометкой «Актуализация персональных данных».</li><br>
-        <li>6.4. Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес Оператора  с пометкой «Отзыв согласия на обработку персональных данных».</li><br>
+        <li>6.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора dimaivan-2022@mail.ru с пометкой «Актуализация персональных данных».</li><br>
+        <li>6.4. Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес Оператора dimaivan-2022@mail.ru с пометкой «Отзыв согласия на обработку персональных данных».</li><br>
     </ul>
     <h2 style="font-size: 22px;">7. Трансграничная передача персональных данных</h2>
     <ul style="list-style-type: none;">
