--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    
-    <meta name="title" content="Портфолио верстальщицы | front-end разработчицы (Богданова Надежда)">
+    <!-- <meta name="title" content="Портфолио верстальщицы | front-end разработчица (Богданова Надежда)">
     <meta name="description" content="Портфолио html верстальщицы. На сайте представлены мои работы и контакты для связи со мной">
     <meta name="keywords" content="вёрстка, front-end разработчица, портфолио, верстальщица, html верстальщица, примеры работ">
-    <meta name="author" content="">
+    <meta name="author" content="Богданова Надежда">
 
    
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:title" content="Портфолио верстальщицы | front-end разработчицы (Богданова Надежда)">
+    <meta property="og:title" content="Портфолио верстальщицы | front-end разработчица (Богданова Надежда)">
     <meta property="og:description" content="Портфолио html верстальщицы. На сайте представлены работы по адаптивной и фиксированной верстке сайтов, а так же контакты для связи со мной.">
     <meta property="og:image" content="">
 
   
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="">
-    <meta property="twitter:title" content="Портфолио верстальщицы |  front-end разработчицы (Богданова Надежда)">
+    <meta property="twitter:title" content="Портфолио верстальщицы |  front-end разработчица (Богданова Надежда)">
     <meta property="twitter:description" content="Портфолио html верстальщицы. На сайте представлены работы по адаптивной и фиксированной верстке сайтов, а так же контакты для связи со мной.">
     <meta property="twitter:image" content="">
     
@@ -41,7 +40,8 @@
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">-->
+   
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
