--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
     </aside>
     <section id="promo" class="promo">
         <div class="container">           
-            <div class="title title_fz16 promo__subtitle">Меня зовут   Надежда Богданова</div>
+            <h2 class="title title_fz16 promo__subtitle">Меня зовут   Надежда Богданова</h2>
             <div class="title title_fz48 promo__title">Я web-разработчица  из города Уральска</div>
             <div class="promo__btns" data-modal="consultation">
                 <a href="#" class="promo__link button">
@@ -421,7 +421,7 @@
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__item">
-                    <img src="img/Group 7.png" class="footer__img" alt="garden">
+                    <img src="img/footer_bg.png" class="footer__img" alt="footer_bg">
                 </div>
                 <div class="footer__block">
                     <h2 class="footer__title title title_fz16">Контакты</h2>         
@@ -468,6 +468,7 @@
                     </div>                                       
                 </div>  
             </div>
+        </div>
      </footer>
        <div class="overlay" id="overlay">
         <div class="modal" id="consultation">
