--- a/src/index.html
+++ b/src/index.html
@@ -439,17 +439,17 @@
                         </a>
                     </div> 
                     <div class="footer__descr">Или оставьте ваши данные и я сама вам напишу:</div>              
-                    <form action="smart.php" metod="POST" class="footer__form" enctype="multipart/form-data">
+                    <form action="smart.php" method="POST" class="footer__form" enctype="multipart/form-data">
                         <div class="footer__input">
-                            <input required  name="name" id="name" type="text">
+                            <input required  name="name" id="main_name" type="text">
                                 <label  for="name">Ваше имя</label>
                         </div>
                         <div class="footer__input footer__input2">
-                            <input required name="email" id="email" type="email">
+                            <input required name="email" id="main_email" type="email">
                                 <label for="email">Ваша почта</label>
                         </div>
                         <div class="footer__textarea">
-                            <textarea name="text" id="text" cols="30" rows="10"></textarea>
+                            <textarea name="text" id="main_text" cols="30" rows="10"></textarea>
                                 <label for="text">Ваше сообщение</label>
                         </div>
                         <div class="footer__trigers">                           
